deploy/base/processor/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: processor
  labels:
    app: processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: processor
  template:
    metadata:
      labels:
        app: processor
    spec:
      volumes:
        - name: images
          persistentVolumeClaim:
            claimName: images
      containers:
        - name: processor
          image: quay.io/rhnspdev/groundbreaker-processor:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: images
              mountPath: /images
      terminationGracePeriodSeconds: 5
  strategy:
    type: RollingUpdate
