deploy/base/processor/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: processor
  labels:
    app: processor
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: processor
