deploy/base/processor/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: processor
  labels:
    app: processor
spec:
  to:
    kind: Service
    name: processor
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
